public enum Categoria {
    ALIMENTO,
    MUEBLE
}
